* Removes default max-height from .navbar-collapse (so not every navbar will get a max-height collapse section) * Scopes regular 340px max-height to fixed top and bottom navbars only (those are the only ones that really need a max-height to enable scrolling) * Adds a landscape media query for phones to cap the max-height at 200px for fixed navbars"

--- a/less/framework/navbar.less
+++ b/less/framework/navbar.less
@@ -48,7 +48,6 @@
 // content for the user's viewport.
 
 .navbar-collapse {
-  max-height: @navbar-collapse-max-height;
   overflow-x: visible;
   padding-right: @navbar-padding-horizontal;
   padding-left:  @navbar-padding-horizontal;
@@ -87,6 +86,19 @@
     .navbar.fixed-bottom & {
       padding-left: 0;
       padding-right: 0;
+    }
+  }
+}
+
+.navbar-fixed-top,
+.navbar.fixed-top,
+.navbar-fixed-bottom,
+.navbar.fixed-bottom {
+  .navbar-collapse {
+    max-height: @navbar-collapse-max-height;
+
+    @media (max-width: @breakpoint-xs) and (orientation: landscape) {
+      max-height: 200px;
     }
   }
 }
